# ai-base-instruct

./: .env  .env.example  .gitignore  Architecture.md  README.md  alembic.ini  check_db_config.py  environment.env.example  function-list.md  pyproject.toml  requirements.txt  test_dependency.py  test_milvus.py
.cursor/rules/: adaptive-document-processing.mdc  api-endpoints.mdc  api_structure.mdc  auth_system.mdc  caching_system.mdc  celery_tasks.mdc  database_structure.mdc  document_processing.mdc  enterprise_kb_structure.mdc  milvus_integration.mdc  milvus_vector_store.mdc  model_providers.mdc  project-structure.mdc  project_structure.mdc  python-fastapi-best-practice.mdc  retrieval_engine.mdc  vector-storage.mdc
docs/: celery_configuration.md  celery_migration_guide.md  celery_optimization.md  document_processing_pipeline.md  fastapi_lifespan.md  hybrid_search.md  optimization.md  parallel_processing.md  production_deployment.md  ragflow_api.md  semantic_chunking.md
docs/migrations/: document_tasks_migration.md
enterprise_kb/: __init__.py  main.py
enterprise_kb/api/: api.py  app.py  auth.py  auth_routes.py  celery_tasks.py  celery_tasks_v2.py  (+10 more)
examples/: parallel_processing_example.py  ragflow_config.yaml  semantic_chunking_example.py  unified_celery_example.py
migrations/: create_tables.sql  env.py
scripts/: enterprise_kb.service  start_celery.sh  start_production.sh  start_unified_celery.py  update_celery_imports.py
tests/: test_celery_migration.py  test_document_pipeline.py  test_milvus.py  test_ragflow_api.py  test_utils.py  test_vector_stores.py
(+133 files in other folders)
