[tool.poetry]
name = "enterprise_kb"
version = "0.1.0"
description = "企业知识库平台"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
pymilvus = "^2.3.4"
llama-index = "^0.9.25"
openai = "^1.3.8"
fastapi-users = "^12.1.2"
fastapi-jwt-auth = "^0.5.0"
fastapi-pagination = "^0.12.12"
fastapi-limiter = "^0.1.5"
fastapi-cache2 = "^0.2.1"
redis = "^5.0.1"
fastapi-mail = "^1.4.1"
python-multipart = "^0.0.6"
pymupdf = "^1.23.8"
python-docx = "^1.1.0"
unstructured = "^0.11.0"
python-dotenv = "^1.0.0"
jieba = "^0.42.1"
rank-bm25 = "^0.2.2"
numpy = "^1.26.2"
markitdown = "^0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.2"
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "B", "I"]
